fixed alignment issue in header

--- a/modules/taskman.css
+++ b/modules/taskman.css
@@ -35,6 +35,15 @@
 }
 
 /*
+ * Small alignment issue with select menu in header
+ */
+
+#task-sortby-button {
+  margin-top: -0.5em;
+}
+
+
+/*
  * fix blank square when both collapsible listview and counter are present
  */
 
